--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -59,4 +59,16 @@
     app:layout_constraintTop_toTopOf="parent"
     tools:src="@tools:sample/backgrounds/scenic" />
 
+  <Button
+    android:id="@+id/button_payment"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Payment"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.489"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="@+id/imageView2"
+    app:layout_constraintVertical_bias="0.127" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
