--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -71,4 +71,16 @@
     app:layout_constraintTop_toTopOf="@+id/imageView2"
     app:layout_constraintVertical_bias="0.127" />
 
+  <Button
+    android:id="@+id/dark_mode"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Dark Mode"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.498"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.209" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
