--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
   <EditText
     android:id="@+id/editText"
-    android:layout_width="wrap_content"
+    android:layout_width="250dp"
     android:layout_height="wrap_content"
     android:layout_marginBottom="313dp"
     android:layout_marginEnd="85dp"
@@ -26,7 +26,7 @@
 
   <EditText
     android:id="@+id/editText2"
-    android:layout_width="wrap_content"
+    android:layout_width="250dp"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
     android:layout_marginEnd="85dp"
@@ -55,13 +55,17 @@
 
   <Button
     android:id="@+id/button2"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="250dp"
+    android:layout_height="60dp"
     android:layout_marginBottom="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
     android:text="@string/register"
+    android:textAllCaps="false"
+    android:textSize="20dp"
+    android:textColor="#FFFFFF"
+    android:background="@drawable/custom_button"
     app:layout_constraintBottom_toTopOf="@+id/textView"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
