--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -9,35 +9,47 @@
 
     <Button
         android:id="@+id/button_payment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
         android:text="Payment"
+        android:textAllCaps="false"
+        android:textSize="20dp"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toTopOf="@+id/button_settings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button_settings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="userForm"
-        app:layout_constraintBottom_toTopOf="@+id/dark_mode"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_payment" />
+  <Button
+    android:id="@+id/button_settings"
+    android:layout_width="250dp"
+    android:layout_height="60dp"
+    android:background="@drawable/custom_button"
+    android:text="userForm"
+    android:textAllCaps="false"
+    android:textColor="#FFFFFF"
+    android:textSize="20dp"
+    app:layout_constraintBottom_toTopOf="@+id/dark_mode"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.496"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/button_payment" />
 
-    <Button
-        android:id="@+id/dark_mode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dark Mode"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_settings" />
+  <Button
+    android:id="@+id/dark_mode"
+    android:layout_width="250dp"
+    android:layout_height="60dp"
+    android:background="@drawable/custom_button"
+    android:text="Dark Mode"
+    android:textAllCaps="false"
+    android:textColor="#FFFFFF"
+    android:textSize="20dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.503"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/button_settings" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
