--- a/app/src/main/res/layout/fragment_user_form.xml
+++ b/app/src/main/res/layout/fragment_user_form.xml
@@ -58,7 +58,7 @@
   <Spinner
     android:id="@+id/spinner"
     android:layout_width="250dp"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
