--- a/app/src/main/res/layout/fragment_custom_offering.xml
+++ b/app/src/main/res/layout/fragment_custom_offering.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button_second"
+        android:id="@+id/pay"
         android:layout_width="250dp"
         android:layout_height="60dp"
         android:layout_marginBottom="24dp"
