--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,34 +16,54 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button_quick_offering"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="24dp"
-        android:text="Quick offering"
-        android:textAllCaps="false"
-        android:textSize="20dp"
-        android:textColor="#FFFFFF"
-        android:background="@drawable/custom_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+  <Button
+    android:id="@+id/button_quick_offering"
+    android:layout_width="250dp"
+    android:layout_height="60dp"
+    android:layout_marginBottom="24dp"
+    android:background="@drawable/custom_button"
+    android:text="Quick offering"
+    android:textAllCaps="false"
+    android:textColor="#FFFFFF"
+    android:textSize="20dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.503"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/button_prayer"
+    app:layout_constraintVertical_bias="0.915" />
 
-    <Button
-        android:id="@+id/button_custom_offering"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="24dp"
-        android:text="Custom offering"
-        android:textAllCaps="false"
-        android:textSize="20dp"
-        android:textColor="#FFFFFF"
-        android:background="@drawable/custom_button"
-        app:layout_constraintBottom_toTopOf="@+id/button_quick_offering"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+  <Button
+    android:id="@+id/button_custom_offering"
+    android:layout_width="250dp"
+    android:layout_height="60dp"
+    android:layout_marginBottom="24dp"
+    android:background="@drawable/custom_button"
+    android:text="Custom offering"
+    android:textAllCaps="false"
+    android:textColor="#FFFFFF"
+    android:textSize="20dp"
+    app:layout_constraintBottom_toTopOf="@+id/button_quick_offering"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.503"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/button_prayer"
+    app:layout_constraintVertical_bias="0.911" />
+
+  <Button
+    android:id="@+id/button_prayer"
+    android:layout_width="250dp"
+    android:layout_height="60dp"
+    android:text="@string/your_prayer"
+    android:textAllCaps="false"
+    android:textSize="20dp"
+    android:textColor="#FFFFFF"
+    android:background="@drawable/custom_button"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.498"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.699" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
