--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -4,7 +4,7 @@
   xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.pamo.iparish.PaymentActivity">
+tools:context="com.pamo.iparish.settings.PaymentActivity">
 
 <com.braintreepayments.cardform.view.CardForm
   android:id="@+id/card_form"
