--- a/app/src/main/res/layout/fragment_darkmode.xml
+++ b/app/src/main/res/layout/fragment_darkmode.xml
@@ -3,7 +3,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".DarkmodeFragment">
+  tools:context=".darkMode.DarkmodeFragment">
 
   <!-- TODO: Update blank fragment layout -->
   <TextView
