--- a/app/src/main/res/layout/fragment_custom_offering.xml
+++ b/app/src/main/res/layout/fragment_custom_offering.xml
@@ -6,83 +6,48 @@
     android:layout_height="match_parent"
     tools:context=".donation.CustomOfferingFragment">
 
-    <TextView
-        android:id="@+id/textview_second"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Generosity is virtue!"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/pay"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="24dp"
-        android:text="Click To Make Offering"
-        android:textAllCaps="false"
-        android:textSize="20dp"
-        android:textColor="#FFFFFF"
-        android:background="@drawable/custom_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+  <ImageButton
+    android:id="@+id/mass"
+    android:layout_width="180dp"
+    android:layout_height="151dp"
+    android:background="#FFFFFF"
+    android:scaleType="centerInside"
+    android:src="@drawable/mass"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.508"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/funeral"
+    app:layout_constraintVertical_bias="0.0" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_intentions">
+  <ImageButton
+    android:id="@+id/funeral"
+    android:layout_width="177dp"
+    android:layout_height="159dp"
+    android:background="#FFFFFF"
+    android:scaleType="centerInside"
+    android:src="@drawable/funeral"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.513"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/confession"
+    app:layout_constraintVertical_bias="0.0" />
 
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAllCaps="false"
-            android:textSize="20dp"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/custom_button"
-            android:layout_weight="1"
-            android:text="-" />
+  <ImageButton
+    android:id="@+id/confession"
+    android:layout_width="181dp"
+    android:layout_height="157dp"
+    android:background="#FFFFFF"
+    android:scaleType="centerInside"
+    android:src="@drawable/confession"
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="1"
-            android:text="10 zł"
-            android:textAlignment="center"
-            android:textSize="24sp" />
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.506"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.117" />
 
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="+"
-            android:textAllCaps="false"
-            android:textSize="20dp"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/custom_button"/>
-    </LinearLayout>
-
-    <Spinner
-        android:id="@+id/spinner_intentions"
-        android:layout_width="363dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_second" />
 </androidx.constraintlayout.widget.ConstraintLayout>
