--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".HomeFragment">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  tools:context=".HomeFragment">
 
-    <TextView
-        android:id="@+id/textview_first"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Praise God"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+  <TextView
+    android:id="@+id/textview_first"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="24dp"
+    android:text="Praise God"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
 
   <Button
     android:id="@+id/button_quick_offering"
     android:layout_width="250dp"
     android:layout_height="60dp"
-    android:layout_marginBottom="24dp"
     android:background="@drawable/custom_button"
     android:text="Quick offering"
     android:textAllCaps="false"
@@ -28,42 +27,41 @@
     android:textSize="20dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.503"
+    app:layout_constraintHorizontal_bias="0.496"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/button_prayer"
-    app:layout_constraintVertical_bias="0.915" />
-
-  <Button
-    android:id="@+id/button_custom_offering"
-    android:layout_width="250dp"
-    android:layout_height="60dp"
-    android:layout_marginBottom="24dp"
-    android:background="@drawable/custom_button"
-    android:text="Custom offering"
-    android:textAllCaps="false"
-    android:textColor="#FFFFFF"
-    android:textSize="20dp"
-    app:layout_constraintBottom_toTopOf="@+id/button_quick_offering"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.503"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/button_prayer"
-    app:layout_constraintVertical_bias="0.911" />
+    app:layout_constraintTop_toTopOf="@+id/textview_first"
+    app:layout_constraintVertical_bias="0.548" />
 
   <Button
     android:id="@+id/button_prayer"
     android:layout_width="250dp"
     android:layout_height="60dp"
+    android:background="@drawable/custom_button"
     android:text="@string/your_prayer"
     android:textAllCaps="false"
-    android:textSize="20dp"
     android:textColor="#FFFFFF"
-    android:background="@drawable/custom_button"
+    android:textSize="20dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.498"
+    app:layout_constraintHorizontal_bias="0.496"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.699" />
+    app:layout_constraintVertical_bias="0.411" />
+
+  <Button
+    android:id="@+id/button_custom_offering"
+    android:layout_width="250dp"
+    android:layout_height="60dp"
+    android:background="@drawable/custom_button"
+    android:text="Custom offering"
+    android:textAllCaps="false"
+    android:textColor="#FFFFFF"
+    android:textSize="20dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.496"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.721" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
