--- a/app/src/main/res/layout/fragment_user_form.xml
+++ b/app/src/main/res/layout/fragment_user_form.xml
@@ -7,64 +7,69 @@
   tools:context=".settings.UserFormFragment">
 
   <EditText
-    android:id="@+id/phoneNumber"
-    android:layout_width="250dp"
-    android:layout_height="wrap_content"
-    android:ems="10"
-    android:inputType="phone"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+      android:id="@+id/phoneNumber"
+      android:layout_width="250dp"
+      android:layout_height="wrap_content"
+      android:ems="10"
+      android:hint="@string/phone_number"
+      android:inputType="phone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
 
   <EditText
-    android:id="@+id/name"
-    android:layout_width="250dp"
-    android:layout_height="wrap_content"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.503"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.335" />
+      android:id="@+id/name"
+      android:layout_width="250dp"
+      android:layout_height="wrap_content"
+      android:hint="@string/name_hint"
+      android:inputType="textPersonName"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.503"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.335" />
 
   <EditText
-    android:id="@+id/surname"
-    android:layout_width="250dp"
-    android:layout_height="wrap_content"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.498"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.418" />
+      android:id="@+id/surname"
+      android:layout_width="250dp"
+      android:layout_height="wrap_content"
+      android:hint="@string/surname_hint"
+      android:inputType="textPersonName"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.498"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.418" />
 
   <Button
-    android:id="@+id/saveButton"
-    android:layout_width="250dp"
-    android:layout_height="wrap_content"
-    android:text="Save"
-    android:textAllCaps="false"
-    android:textSize="20dp"
-    android:textColor="#FFFFFF"
-    android:background="@drawable/custom_button"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.498"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.612" />
+      android:id="@+id/saveButton"
+      android:layout_width="250dp"
+      android:layout_height="wrap_content"
+      android:background="@drawable/custom_button"
+      android:text="@string/save"
+      android:textAllCaps="false"
+      android:textColor="#FFFFFF"
+      android:textSize="20sp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.498"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.612" />
 
   <Spinner
-    android:id="@+id/spinner"
-    android:layout_width="250dp"
-    android:layout_height="100dp"
-    android:textSize="20dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.503"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.139" />
+      android:id="@+id/spinner"
+      android:layout_width="250dp"
+      android:layout_height="100dp"
+      android:textSize="20sp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.503"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.139" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
