--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -11,26 +11,26 @@
         android:id="@+id/button_payment"
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:text="Payment"
+        android:text="@string/button_payment"
         android:textAllCaps="false"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="#FFFFFF"
         android:background="@drawable/custom_button"
-        app:layout_constraintBottom_toTopOf="@+id/button_settings"
+        app:layout_constraintBottom_toTopOf="@+id/button_user_form"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
   <Button
-    android:id="@+id/button_settings"
+    android:id="@+id/button_user_form"
     android:layout_width="250dp"
     android:layout_height="60dp"
     android:background="@drawable/custom_button"
-    android:text="userForm"
+    android:text="@string/button_user_form"
     android:textAllCaps="false"
     android:textColor="#FFFFFF"
-    android:textSize="20dp"
+    android:textSize="20sp"
     app:layout_constraintBottom_toTopOf="@+id/dark_mode"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.496"
@@ -42,14 +42,14 @@
     android:layout_width="250dp"
     android:layout_height="60dp"
     android:background="@drawable/custom_button"
-    android:text="Dark Mode"
+    android:text="@string/dark_mode"
     android:textAllCaps="false"
     android:textColor="#FFFFFF"
-    android:textSize="20dp"
+    android:textSize="20sp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.503"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/button_settings" />
+    app:layout_constraintTop_toBottomOf="@+id/button_user_form" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
