--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,23 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/parish_pick"
+        android:id="@+id/parish_map"
         android:icon="@drawable/ic_location_on_black_24dp"
-        android:title="Pick a parish"
+        android:title="@string/nav_to_parish"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/settings"
         android:icon="@drawable/ic_settings_black_24dp"
-        android:title="Settings"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/app_bar_switch_darkmode"
-        android:title="Dark mode"
-        app:actionLayout="@layout/switch_item"
+        android:title="@string/settings"
         app:showAsAction="never" />
     <item
         android:id="@+id/logout"
-        android:title="Log out"
+        android:title="@string/logout"
         app:showAsAction="never" />
 
 </menu>
