Payment payment activity refactor

--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -1,70 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="com.pamo.iparish.settings.PaymentActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="20dp"
+    tools:context="com.pamo.iparish.settings.PaymentActivity">
 
-<com.braintreepayments.cardform.view.CardForm
-  android:id="@+id/card_form"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content" />
-
-<Button
-  android:id="@+id/btnBuy"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:layout_alignParentBottom="true"
-  android:layout_marginBottom="10dp"
-  android:layout_marginLeft="40dp"
-  android:layout_marginRight="40dp"
-  android:layout_marginTop="10dp"
-  android:background="@color/colorAccent"
-  android:text="@string/label_buy_now"
-  android:textColor="@android:color/white" />
+  <com.braintreepayments.cardform.view.CardForm
+      android:id="@+id/card_form"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content" />
 
   <Button
-    android:id="@+id/btnSave"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:layout_marginBottom="10dp"
-    android:layout_marginLeft="40dp"
-    android:layout_marginRight="40dp"
-    android:layout_marginTop="10dp"
-    android:background="@color/colorAccent"
-    android:text="@string/label_saveCard"
-    android:textColor="@android:color/white" />
+      android:id="@+id/btnBuy"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignParentBottom="true"
+      android:layout_marginLeft="40dp"
+      android:layout_marginTop="10dp"
+      android:layout_marginRight="40dp"
+      android:layout_marginBottom="10dp"
+      android:background="@color/colorAccent"
+      android:text="@string/label_buy_now"
+      android:textColor="@android:color/white" />
+
+  <Button
+      android:id="@+id/btnSave"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignParentBottom="true"
+      android:layout_marginLeft="40dp"
+      android:layout_marginTop="10dp"
+      android:layout_marginRight="40dp"
+      android:layout_marginBottom="10dp"
+      android:background="@color/colorAccent"
+      android:text="@string/label_saveCard"
+      android:textColor="@android:color/white" />
 
   <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
 
     <TextView
-      android:id="@+id/payment_currency"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/pln"
-      android:textSize="30sp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.615"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.824" />
+        android:id="@+id/payment_currency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/pln"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.615"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.824" />
 
     <TextView
-      android:id="@+id/payment_amount"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textSize="30sp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.458"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.824" />
+        android:id="@+id/payment_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.458"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.824" />
   </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
